--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,19 +14,19 @@
 }
 
 .App-header {
-	background-color: #282c34;
+	background-color: var(--app-bg);
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	font-size: calc(10px + 2vmin);
-	color: white;
-}
+	color: var(--white);
+} 
 
 .App-link {
-	color: #61dafb;
-}
+	color: var(--app-link);
+} 
 
 @keyframes App-logo-spin {from { transform:rotate(0deg);
 	
