Update home img

--- a/frontend/src/assets/css/index.css
+++ b/frontend/src/assets/css/index.css
@@ -1,19 +1,4 @@
-:root {
-/* Font Family */
-  --font-arimo: "Arimo", sans-serif;
-  --font-lato: "Lato", sans-serif;
-  --font-montserrat: "Montserrat", sans-serif;
-/* Font Weight */
-  --weight-thin: 100;
-  --weight-extra-light: 200;
-  --weight-light: 300;
-  --weight-regular: 400;
-  --weight-medium: 500;
-  --weight-semi-bold: 600;
-  --weight-bold: 700;
-  --weight-extra-bold: 800;
-  --weight-black: 900;
-}
+/* Fonts and font-weights moved to src/assets/css/variables.css */
 
 body {
 	margin: 0;
