--- a/frontend/src/assets/css/modedarklight.css
+++ b/frontend/src/assets/css/modedarklight.css
@@ -141,6 +141,28 @@
     color: white;
 }
 
+/* Categories container */
+.dark-theme .category-button {
+  width: 7rem;
+  height: 2rem;
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  border: 1px solid var(--primary-color);
+  border-radius: 1rem;
+  background-color: var(--black);
+  color: var(--primary-color);
+  font-weight: var(--weight-semi-bold);
+  cursor: pointer;
+  transition: all 1s ease;
+}
+
+.dark-theme .category-button:hover,
+.dark-theme .category-button.active {
+    background-color: var(--primary-color);
+    color: var(--white);
+}
+/* End categories container */
+/* End dark theme */
 /* Light theme */
 .light-theme{
     background-color: var(--white);
