wcu-item-description update style

--- a/frontend/src/assets/css/modedarklight.css
+++ b/frontend/src/assets/css/modedarklight.css
@@ -89,7 +89,7 @@
     color: var(--white);
 }
 
-.dark-theme .welcome-txt {
+.dark-theme .welcome-txt, .dark-theme .wcu-item-description {
     color: rgba(217, 232, 245, 0.8);
 }
 
