--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -108,13 +108,14 @@
 	bottom: 1rem;
 }
 
-/* .menu-overlay{
+.menu-overlay{
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background: rgba(0, 0, 0, 0.5);
-	z-index: 999;
-	animation: fade-in 0.3s forwards;
-} */
+	z-index: 0;
+	animation: fade-in 0.3s forwards;	
+	backdrop-filter: blur(2px);
+}
