--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -8,7 +8,7 @@
 	border-bottom: 1px solid rgba(0, 0, 0, 0.226);
 }
 
-.center, .grid-item div:nth-child(1) {
+.grid-item div:nth-child(1) {
 	text-align: center;
 }
 
