--- a/frontend/src/assets/css/shoppingcart.css
+++ b/frontend/src/assets/css/shoppingcart.css
@@ -92,7 +92,7 @@
 	max-width: 400px;
 	padding: var(--gap-1);
 	margin: var(--gap-2) 0;
-	background-color: var(--primary-strong);
+	background-color: var(--primary-color);
 	color: var(--white);
 	font-size: 13pt;
 	border: 1px solid var(--add-cart-border);
@@ -102,7 +102,8 @@
 }
 
 .add-cart-button:hover {
-	background-color: var(--add-cart-hover);
+	background-color: var(--primary-color);
+	opacity: 0.85;
 	border: 1px solid var(--add-cart-border-hover);
 }
 
