--- a/frontend/src/assets/css/products.css
+++ b/frontend/src/assets/css/products.css
@@ -259,15 +259,17 @@
 
 .category {
 	position: absolute;
-	top: 0.5rem;
-	left: 0.5rem;
+	top: 1rem;
+	left: 1rem;
 	background-color: var(--primary-color);
 	color: var(--white);
-	padding: 0.2rem 0.5rem;
-	border-radius: 0.5rem;
+	padding: 0.35rem 0.75rem;
+	border-radius: var(--br-md);
 	font-size: var(--fs-tiny);
-	font-weight: var(--weight-semi-bold);
-	width: 3rem;
+	font-weight: var(--weight-bold);
+	text-transform: uppercase;
+	letter-spacing: 0.5px;
+	z-index: 2;
 }
 
 .category:hover {
